# JRMath

./: .gitignore  CMakeLists.txt  README.md  pom.xml
gpu/: gpuOperators.h
jni/: org_main_JRMathLib.cpp  org_main_JRMathLib.h
jni/gpu/: gpuOperators.cpp  gpuOperators.h
src/main/java/org/main/: Benchmarks.java  JRMathLib.java
